stage01/infra/tests/nettest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nettest
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 100
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: nettest
      image: curlimages/curl
      command: ["sleep", "3600"]
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
